It didn't commit properly first time renamed readme.md to README.md