@@ -13,8 +13,26 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation 'org.jetbrains:annotations:26.0.2' // annotations
+    implementation("net.bytebuddy:byte-buddy:1.17.8") // runtime class generation
+    implementation 'it.unimi.dsi:fastutil:8.5.18'
 }
 
 test {
     useJUnitPlatform()
+}
+
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-preview'
+    useJUnitPlatform()
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
 }
